# airflow-docker-with-llamacpp-server

./: Dockerfile  LocalLLamaCPPServerDockerfile  build_all.sh  build_llm_server.sh  docker-compose.yaml  make_needed_folders.sh  pyproject.toml  readme.md  run_completion_on_local_llama.py  run_llm_server.sh  start_all.sh  stop_all.sh
airflow_docker/: requirements.txt
dags/: test_connection_to_local_llm.py
